--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.1",
+    "jquery": "^3.4.1",
+    "ng2-charts": "^2.3.0",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
