--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.1",
     "jquery": "^3.4.1",
+    "net": "^1.0.2",
     "ng2-charts": "^2.3.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
